--- a/projectDogYear/index.html
+++ b/projectDogYear/index.html
@@ -2,11 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
-    <script src="home.js"></script>
+    <script src="app.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1 id="someText"></h1>
-    <script src="home.js"></script>
+    
 </body>
 </html>
