--- a/projectMagicEightBall/index.html
+++ b/projectMagicEightBall/index.html
@@ -2,10 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="home.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="name"></h1>
+        <h1 id="question"></h1>
+        <h1 id="answer"></h1>
 </body>
+<script src="home.js"></script>
 </html>
