--- a/JS/projectLoginForm/index.html
+++ b/JS/projectLoginForm/index.html
@@ -10,18 +10,18 @@
     <div class="loginForm">
         <div class="form">
             <label for="userName">User Name</label>
-            <input type="text" class="userName" name="fullname" placeholder="User Name..">
+            <input type="text" id="userName" name="fullname" placeholder="User Name..">
 
             <label for="dateOfBirth">Date of Birth</label>
-            <input type="date" class="dateOfBirth" name="birthday" placeholder="Date of Birth">
+            <input type="date" id="dateOfBirth" name="birthday" placeholder="Date of Birth">
 
             <label for="phoneNumber">Phone Number</label>
-            <input type="number" class="phoneNumber" name="phone" placeholder="Phone Number">
+            <input type="number" id="phoneNumber" name="phone" placeholder="Phone Number">
 
             <label for="email">Email</label>
-            <input type="email" class="email" name="email" placeholder="Email">
+            <input type="email" id="email" name="email" placeholder="Email">
 
-            <button>Submit</button>
+            <button id="submit">Submit</button>
         </div>
     </div>
 </body>
