--- a/JS/projectLoginForm/index.html
+++ b/JS/projectLoginForm/index.html
@@ -10,16 +10,16 @@
     <div class="loginForm">
         <div class="form">
             <label for="userName">User Name</label>
-            <input type="text" id="userName" name="fullname" placeholder="User Name..">
+            <input type="text" id="userName" name="fullname" placeholder="User Name.." required>
 
             <label for="dateOfBirth">Date of Birth</label>
-            <input type="date" id="dateOfBirth" name="birthday" placeholder="Date of Birth">
+            <input type="date" id="dateOfBirth" name="birthday" placeholder="Date of Birth" required>
 
             <label for="phoneNumber">Phone Number</label>
-            <input type="number" id="phone" name="phone" placeholder="Phone Number">
+            <input type="number" id="phone" name="phone" placeholder="Phone Number" required>
 
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email">
+            <input type="email" id="email" name="email" placeholder="Email" required>
             
             <div class="box">
                 <label>Remember login
