--- a/HTML/projectGooglePage/index.html
+++ b/HTML/projectGooglePage/index.html
@@ -5,13 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Google</title>
 </head>
 <body>
     <nav>
         <a href="#" class="gmail">Gmail</a>
         <a href="#" class="picture">Image</a>
-        <a href="#" class="avatar"><img src="img/unnamed.jpg"</a>
+        <a href="#" class="avatar"><img src="img/unnamed.jpg"></a>
     </nav>
 
     <div class="container">
@@ -20,6 +21,11 @@
             <input class="searchBox">
             <i class="fa fa-search" style="font-size: 20px;color: gray;"></i>
             <i class="fa fa-keyboard-o" style="font-size: 20px;color: gray;"></i>
+        </div>
+
+        <div class="button">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
         </div>
     </div>
 </body>
